force-app/main/default/objects/Division__c/Division__c.object-meta.xml
<CustomObject>
    <description>A division represents an ADG company (or entity).</description>
    <label>Division</label>
    <nameField>
        <label>Division Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Divisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>