force-app/main/default/objects/Division__c/fields/Branch_Locations__c.field-meta.xml
<CustomField>
    <fullName>Branch_Locations__c</fullName>
    <label>Branch Locations</label>
    <summaryForeignKey>Branch_Location__c.Division__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>