force-app/main/default/objects/Division__c/fields/Current_ERP__c.field-meta.xml
<CustomField>
    <fullName>Current_ERP__c</fullName>
    <label>Current ERP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFMS</fullName>
            </value>
            <value>
                <fullName>Great Plains</fullName>
            </value>
            <value>
                <fullName>uFactory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>