force-app/main/default/objects/Division__c/fields/Division_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Short_Name__c</fullName>
    <label>Division Short Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>