force-app/main/default/objects/Division__c/fields/FMS_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>FMS_Go_Live_Date__c</fullName>
    <label>FMS Go-Live Date</label>
    <type>Date</type>
</CustomField>