force-app/main/default/objects/Division__c/fields/Physical_Address_HQ__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_HQ__c</fullName>
    <label>Physical Address (HQ)</label>
    <type>TextArea</type>
</CustomField>