force-app/main/default/objects/Division__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Division_Short_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>